My skills realizado

--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,11 @@ img{
 
 /*-----Reutilizable-----*/
 
+.container{
+    max-width: 1140px;
+    margin-inline: auto;
+}
+
 .grid{
     display: grid;
     gap: 30px;
@@ -88,6 +93,17 @@ img{
 
 .section{
     padding-block: 70px;
+}
+
+.section__title{
+    font-size: var(--big-font-size);
+    font-weight: var(--weight-800);
+    text-align: center;
+    margin-bottom: 70px;
+}
+
+.section__title span{
+    color: var(--first-color);
 }
 
 .button__icon {
