--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -35,7 +35,7 @@
     content: "";
     position: absolute;
     left: 0;
-    top: 22%;
+    top: 26px;
     width: 40px;
     height: 5px;
     border-radius: 10px;
