--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -96,7 +96,7 @@
 }
 
 .skills__icon{
-    font-size: 40px;
+    font-size: 60px;
     color: var(--first-color);
     margin-top: 10px;
     text-align: center;
@@ -104,9 +104,10 @@
 
 .skills__title{
     font-family: var(--body-font);
-    font-size: var(--normal-font-size);
-    font-weight: var(--weight-400);
+    font-size: var(--large-font-size);
+    font-weight: var(--weight-800);
     text-align: center;
+    margin-top: 10px;
 }
 
 .resume__item{
