--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -13,10 +13,17 @@
     z-index: 1;
 }
 
+.home__icon{
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+}
+
 .home__data {
     max-width: 700px;
     margin-inline: auto;
-    padding-top: 20px;
+    padding-top: 10px;
 }
 
 .home__title {
@@ -53,6 +60,7 @@
 .home__description {
     line-height: 2.125;
     margin-block: 16px 32px;
+    text-align: justify;
 }
 
 .color__block {
