--- a/src/pages/portafolio/portafolio.css
+++ b/src/pages/portafolio/portafolio.css
@@ -50,6 +50,7 @@
     display: grid;
     place-items: center;
     padding: 15px;
+    cursor: initial;
 }
 
 .portfolio__modal-content{
@@ -68,6 +69,7 @@
     width: 50px;
     height: 50px;
     filter: invert(0.8);
+    cursor: pointer;
 }
 
 .modal__title {
