Actualización de typed.js

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
     --text-color: hsl(0, 0%, 50%);
     --body-color: hsl(0, 0%, 100%);
     --container-color: hsl(0, 0%, 93%);
+    --nav-toggle-color: var(--container-color);
     --border-color: hsl(0, 0%, 87%);
     --text-white: #fff;
 
@@ -42,6 +43,7 @@
     --text-color: hsl(0, 0%, 80%);
     --body-color: hsl(0, 0%, 7%);
     --container-color: hsl(0, 1%, 17%);
+    --nav-toggle-color: var(--first-color);
     --border-color: hsl(0, 0%, 15%);
 }
 
